# mcp-jira

./: .cursorrules  .dockerignore  .env.example  .env.project1.example  .env.project2.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.project1.yml  docker-compose.project2.yml  docker-compose.yml  pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: __init__.py  app.py  cli.py  config.py  jira_client.py  server.py
